[gd_scene load_steps=3 format=2]

[ext_resource path="res://Hostiles/AsteroidSpawner.gd" type="Script" id=1]

[sub_resource type="ParticlesMaterial" id=1]
emission_shape = 2
emission_box_extents = Vector3( 300, 0, 1 )
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 5.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 900.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0
color = Color( 0.372549, 0.317647, 0.317647, 1 )

[node name="AstroidSpawner" type="Node2D"]
script = ExtResource( 1 )

[node name="SpeedAsteroidTimer" type="Timer" parent="."]
autostart = true

[node name="LargeGroupAsteroidTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="LargeAsteroidTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="TargetingAsteroidsTimer" type="Timer" parent="."]
wait_time = 7.0
autostart = true

[node name="GemTimer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="Tween" type="Tween" parent="."]

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 336.76, -2.67271 )
amount = 20
lifetime = 2.0
process_material = SubResource( 1 )

[connection signal="timeout" from="SpeedAsteroidTimer" to="." method="_on_SpeedAsteroidTimer_timeout"]
[connection signal="timeout" from="LargeGroupAsteroidTimer" to="." method="_on_LargeGroupAsteroidTimer_timeout"]
[connection signal="timeout" from="LargeAsteroidTimer" to="." method="_on_LargeAsteroid_timeout"]
[connection signal="timeout" from="TargetingAsteroidsTimer" to="." method="_on_TargetingAsteroidsTimer_timeout"]
[connection signal="timeout" from="GemTimer" to="." method="_on_GemTimer_timeout"]
